--- a/words/static/words/style.css
+++ b/words/static/words/style.css
@@ -17,19 +17,25 @@ div, input {
     /* border: 3px solid green; */
     margin: auto;
     width: 100%;
-    padding: 10px;
-    text-align: center;
+    padding: 10px 0px;
     background-color: #424242;
 }
 
 #word_field {
+    display: inline;
     font-size: 25px;
+    background-color: #424242;
+    text-align: center;
     color: #E0E0E0;
     margin: auto;
-    /* width: 100%; */
-    padding: 7px;
+    width: 100%;
+    padding: 0;
     font-family: Noto Sans;
     border: 0;
     -webkit-appearance:none;
     outline: none;
+}
+
+#done {
+    height: 50%;
 }
