--- a/words/static/words/style.css
+++ b/words/static/words/style.css
@@ -8,7 +8,7 @@ body {
     color: #E0E0E0;
 }
 
-div, input {
+span, div, input {
     margin: 0;
     padding: 0;
 }
@@ -28,7 +28,7 @@ div, input {
     text-align: center;
     color: #E0E0E0;
     margin: auto;
-    width: 100%;
+    width: 80%;
     padding: 0;
     font-family: Noto Sans;
     border: 0;
@@ -37,5 +37,9 @@ div, input {
 }
 
 #done {
-    height: 50%;
+    width: 20px;
+}
+
+#error {
+    width: 20px;
 }
