--- a/words/static/words/style.css
+++ b/words/static/words/style.css
@@ -43,3 +43,21 @@ span, div, input {
 #error {
     width: 20px;
 }
+
+#score_container {
+    position: absolute;
+    width: 60px;
+    height: 38px;
+}
+
+#score
+{
+    margin-left: 5px;
+    font-size: 25px;
+    font-family: Noto Sans;
+    text-align: center;
+    border-radius: 50px;
+    border: 1px solid #00C853;
+    background-color: #00C853;
+    color: #424242;
+}
