--- a/words/templates/index.html
+++ b/words/templates/index.html
@@ -9,8 +9,10 @@
 
 {% block content %}
     <div class="center">
-        <span id="score">
-            0
+        <span id="score_container">
+            <div id="score">
+                0
+            </div>
         </span>
         <span>
             <input type="text" name="word" id="word_field" pattern="\w+" autocomplete="off" autofocus />
