--- a/words/static/words/style.css
+++ b/words/static/words/style.css
@@ -3,7 +3,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Noto Sans;
+    font-family: Noto Sans, sans-serif;
     background-color: #212121;
     color: #E0E0E0;
 }
@@ -17,7 +17,7 @@ span, div, input {
     /* border: 3px solid green; */
     margin: auto;
     width: 100%;
-    padding: 10px 0px;
+    padding: 10px 0;
     background-color: #424242;
 }
 
@@ -30,7 +30,7 @@ span, div, input {
     margin: auto;
     width: 80%;
     padding: 0;
-    font-family: Noto Sans;
+    font-family: Noto Sans, sans-serif;
     border: 0;
     -webkit-appearance:none;
     outline: none;
@@ -43,8 +43,7 @@ span #done, span #error {
 #done, #error  {
     width: 15px;
     margin: 0;
-    padding: 0;
-    padding-top: 5px;
+    padding: 5px 0 0;
 }
 
 #score_container {
@@ -58,7 +57,7 @@ span #done, span #error {
 {
     margin-left: 5px;
     font-size: 25px;
-    font-family: Noto Sans;
+    font-family: Noto Sans, sans-serif;
     text-align: center;
     border-radius: 50px;
     border: 1px solid #00C853;
@@ -68,7 +67,7 @@ span #done, span #error {
 
 #hidden_response, #words_cloud {
     font-size: 20px;
-    font-family: Noto Sans;
+    font-family: Noto Sans, sans-serif;
     margin: 10px;
 }
 
